# weather-service

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
Docker/: Dockerfile  Dockerfile.mcp
Jenkins/: Jenkinsfile.build  Jenkinsfile.deploy
config/logging/: logging.dev1.yaml  logging.local.yaml  logging.yaml
helm/mcp/: Chart.yaml  values-dev1.yaml  values.yaml
helm/mcp/dashboards/: weather-mcp-dashboard.json
helm/mcp/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
helm/mcp/templates/monitoring/: grafanadashboard.yaml   prometheusrule.yaml  servicemonitor.yaml
logs/: app.log.2025-06-07  app.log.2025-06-08
src/config/: logging.py  logging_config.py  settings_config.py
src/core/: annotated.py  http_client.py  monitoring.py  utils.py
src/enums/: mcp_transport.py  openweather.py
src/mcp/: main.py
src/mcp/tools/: __init__.py  current_weather.py
src/weather_mcp/: main.py  server.py  utils.py
src/weather_mcp/custom_routes/: __init__.py  health_check.py  monitoring.py  server_info.py
src/weather_mcp/tools/: __init__.py  air_pollution.py  current_weather.py  forcast.py  forcast_daily.py  forcast_hourly.py  forecast.py  geocoding.py
tests/: conftest.py
tests/config/: test_logging_config.py  test_settings_config.py
tests/core/: test_utils_core.py
tests/weather_mcp/: conftest.py  test_utils_mcp.py
tests/weather_mcp/custom_routes/: test_health_check.py  test_monitoring.py
tests/weather_mcp/tools/: test_air_pollution.py  test_current_weather.py  test_forecast.py  test_geocoding.py
