[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Wai Yan Min Khaing <waiyanminkhaing1997@gmail.com>"]
readme = "README.md"
packages = [
    { include = "weather_mcp", from = "src" },
    { include = "config", from = "src" },
    { include = "enums", from = "src" },
    { include = "utils", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain-mcp-adapters = ">=0.1.4,<0.2.0"
python-json-logger = ">=3.3.0,<4.0.0"
httpx = ">=0.28.1,<0.29.0"
prometheus-client = "^0.22.1"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.11.12"
mypy = "^1.16.0"
mcp = { extras = ["cli"], version = "^1.9.2" }
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-env = "^1.1.5"
pytest-cov = "^6.1.1"

[tool.pytest.ini_options]
env = [
    "ENV=local",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src", "tests"]

[tool.coverage.run]
omit = ["*/__init__.py", "main.py"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
